# ProgramacionDeSistemas

./: CMakeLists.txt  README.md
EjercicioClase/: CMakeLists.txt
EjercicioClase/EjercicioClase4/: TListaD.c  TListaD.h
Sistemas/Abril17/: Jugador.c
Sistemas/practica1/: gestion_memoria.c
Sistemas/practica2/: decrypter.c
